--- a/index.html
+++ b/index.html
@@ -4,11 +4,71 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="stylesheet" href="./assets/css/styles.css">
+  <title>The Flower Pot</title>
 </head>
 
 <body>
-  
+  <header>
+    <h1>The Flower Pot</h1> 
+   <ul>
+     <li>
+       <a href="#AboutUs">About Us</a>
+     </li>
+     <li>
+       <a href="#Contact">Contact</a>
+     </li>
+     <li>
+       <a href="#Gallery">Gallery</a>
+     </li>
+
+   </ul>
+  </header>
+  <div class="Now">
+    <h3>What's good to plant now</h3>
+    <p>
+      A list plants that are good to plant now. Specifc to your region.
+    </p>
+
+  </div>
+
+  <div class="Seed"> 
+    <h3>Seed banks</h3>
+    <p>
+      We will have links to seed banks, and this is also where we will posibily have seed saving techniques 
+    </p>
+  </div>
+
+  <div class="Origins">
+    <h3>Plant Origins</h3>
+    <P>
+      Educational tile to show where all our plants are from in teh world! 
+    </P>
+  </div>
+
+  <div class="When">
+    <h3>When to Plant</h3>
+    <p>
+      Depening on the users location it will tell you what is good to plant now. What is in season 
+    </p>
+
+  </div>
+
+  <div class="Companion">
+    <h3>Companion Planting</h3>
+    <p>
+      What plants to plant together! 
+      Plants swap nutrience that help each other out. Example, tomato and basil, Chili and tumric 
+    </p>
+  </div>
+
+  <div class="Garden">
+    <h3>Your Garden</h3>
+    <p>
+      A list of all the plants you have in your garden. All of the care information will be shown, as well as the rough time it will take.
+    </p>
+  </div>
+
 </body>
 
 </html>
