Landing page completed

--- a/index.html
+++ b/index.html
@@ -40,20 +40,45 @@
     <section class="hero">
         <div class="container">
             <div id="your-Garden"  class="your-garden content-card">
-                <h2> Your Garden</h2>
-                <p>its a good time to plant: list of stuff</p>
+                <div class="card-header">
+                    <h2> Your Garden</h2>
+                </div>
+                <div class="card-content">
+                    <p>its a good time to plant: list of stuff</p>
+                </div>
             </div>
+
             <div id="seeds-bank" class="seeds-bank content-card">
-                <h2>Seeds bank</h2>
+                <div class="card-header">
+                    <h2>Seeds bank</h2>
+                </div>
+                <div class="card-content">
+                    <p>Placeholder</p>
+                </div>
             </div>
             <div id="where-to-plant"  class="where-to-plant content-card">
-                <h2>Where to plant</h2>
+                <div class="card-header">
+                    <h2>Where to plant</h2>
+                </div>
+                <div class="card-content">
+                    <p>Placeholder</p>
+                </div>
             </div>
             <div id="plant-origin" class="plant-origin content-card">
-                <h2>Plant Origin</h2>
+                <div class="card-header">
+                    <h2>Plant Origin</h2>
+                </div>
+                <div class="card-content">
+                    <p>Placeholder</p>
+                </div>
             </div>
             <div id="companion-planting" class="companion-planting content-card">
-                <h2>Companion Planting</h2>
+                <div class="card-header">
+                    <h2>Companion Planting</h2>
+                </div>
+                <div class="card-content">
+                    <p>Placeholder</p>
+                </div>
             </div>
         </div>
     </section>
