--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The FlowerPot</title>
     <!-- defer attribute runs the script after the HTML has rendered -->
-    <script src="assets/scripts/script.js" defer></script>
+    <script src="assets/scripts/widgetScript.js" defer></script>
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
