--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
     </header>
     <section class="hero">
         <div class="container">
-            <div id="your-Garden"  class="your-garden content-card">
+            <div id="good-to-plant"  class="good-to-plant content-card">
                 <div class="card-header">
-                    <h2> Your Garden</h2>
+                    <h2>Its a good time to plant:</h2>
                 </div>
                 <div class="card-content">
-                    <p>its a good time to plant: list of stuff</p>
+                    <p>list of plants</p>
                 </div>
             </div>
 
@@ -78,6 +78,14 @@
                 </div>
                 <div class="card-content">
                     <p>Placeholder</p>
+                </div>
+            </div>
+            <div id="your-Garden"  class="your-garden content-card">
+                <div class="card-header">
+                    <h2> Your Garden</h2>
+                </div>
+                <div class="card-content">
+                    <p>Keep track of your plants here!</p>
                 </div>
             </div>
         </div>
