Plant cards WIP

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>The FlowerPot</title>
     <!-- defer attribute runs the script after the HTML has rendered -->
     <script src="assets/scripts/widgetScript.js" defer></script>
+    <script src="assets/scripts/goodToPlantScript.js" defer></script>
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -43,8 +44,25 @@
                 <div class="card-header">
                     <h2>Its a good time to plant:</h2>
                 </div>
-                <div class="card-content">
-                    <p>list of plants</p>
+                <div class="card-content plants">
+                    <p>{Plant name}</p>
+                    <img src="assets/images/background image.jpeg" width="200" alt="image of plant">
+                    <p>Prefers <span>{full sun}</span></p>
+                    <p>Average height is <span>{1 meter}</span></p>
+                    <p>Average span of <span>{plant name}</span> is <span>{50 cm}</span></p>
+                    <p>**This plant bears fruit or may be edible**</p>
+                </div>
+                <div class="card-content plants">
+                    <p>Plant 2</p>
+                </div>
+                <div class="card-contet plants">
+                    <p>Plant 3</p>
+                </div>
+                <div class="card-content plants">
+                    <p>Plant 4</p>
+                </div>
+                <div class="card-content plants">
+                    <p>Plant 5</p>
                 </div>
             </div>
 
