--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div class="card-header">
                     <h2>Its a good time to plant:</h2>
                 </div>
-                <div class="card-content plants">
+                <!-- <div class="card-content plants">
                     <p>{Plant name}</p>
                     <img src="assets/images/background image.jpeg" width="200" alt="image of plant">
                     <p>Prefers <span>{full sun}</span></p>
@@ -63,7 +63,7 @@
                 </div>
                 <div class="card-content plants">
                     <p>Plant 5</p>
-                </div>
+                </div> -->
             </div>
 
             <div id="seeds-bank" class="seeds-bank content-card">
