--- a/index.html
+++ b/index.html
@@ -44,15 +44,14 @@
                 <div class="card-header">
                     <h2>Its a good time to plant:</h2>
                 </div>
-                <!-- <div class="card-content plants">
-                    <p>{Plant name}</p>
-                    <img src="assets/images/background image.jpeg" width="200" alt="image of plant">
-                    <p>Prefers <span>{full sun}</span></p>
-                    <p>Average height is <span>{1 meter}</span></p>
-                    <p>Average span of <span>{plant name}</span> is <span>{50 cm}</span></p>
-                    <p>**This plant bears fruit or may be edible**</p>
+                <div id="suitableForPlanting" class="card-content plants">
+                    <p id="plant-name">{Plant name}</p>
+                    <img id="suitablePlantImg" src="assets/images/background image.jpeg" width="200" alt="image of plant">
+                    <p>Prefers light index of <span id="sunPreference">{full sun}</span></p>
+                    <p>Average height is <span id="plantHeight">{1}</span>m</p>
+                    <p>Average span is <span id="plantSpan">{50}</span> cm</p>
                 </div>
-                <div class="card-content plants">
+                <!-- <div class="card-content plants">
                     <p>Plant 2</p>
                 </div>
                 <div class="card-contet plants">
