users plant data is stored in local storage

--- a/index.html
+++ b/index.html
@@ -39,47 +39,47 @@
     </header>
     <section class="hero">
         <div class="container">
-            <div id="your-Garden"  class="your-garden content-card">
+            <a id="your-Garden"  class="your-garden content-card" href = "assets/pages/yourGarden.html">
                 <div class="card-header">
                     <h2> Your Garden</h2>
                 </div>
                 <div class="card-content">
                     <p>its a good time to plant: list of stuff</p>
                 </div>
-            </div>
+            </a>
 
-            <div id="seeds-bank" class="seeds-bank content-card">
+            <a id="seeds-bank" class="seeds-bank content-card">
                 <div class="card-header">
                     <h2>Seeds bank</h2>
                 </div>
                 <div class="card-content">
                     <p>Placeholder</p>
                 </div>
-            </div>
-            <div id="where-to-plant"  class="where-to-plant content-card">
+            </a>
+            <a id="where-to-plant"  class="where-to-plant content-card">
                 <div class="card-header">
                     <h2>Where to plant</h2>
                 </div>
                 <div class="card-content">
                     <p>Placeholder</p>
                 </div>
-            </div>
-            <div id="plant-origin" class="plant-origin content-card">
+            </a>
+            <a id="plant-origin" class="plant-origin content-card">
                 <div class="card-header">
                     <h2>Plant Origin</h2>
                 </div>
                 <div class="card-content">
                     <p>Placeholder</p>
                 </div>
-            </div>
-            <div id="companion-planting" class="companion-planting content-card">
+            </a>
+            <a id="companion-planting" class="companion-planting content-card">
                 <div class="card-header">
                     <h2>Companion Planting</h2>
                 </div>
                 <div class="card-content">
                     <p>Placeholder</p>
                 </div>
-            </div>
+            </a>
         </div>
     </section>
 
