Changed API for better data. Reworked good to grow card to show team favourites

--- a/index.html
+++ b/index.html
@@ -42,14 +42,29 @@
         <div class="container">
             <div id="good-to-plant"  class="good-to-plant content-card">
                 <div class="card-header">
-                    <h2>Its a good time to plant:</h2>
+                    <h2>Team Favourites:</h2>
                 </div>
                 <div id="suitableForPlanting" class="card-content plants">
-                    <p id="plant-name">{Plant name}</p>
-                    <img id="suitablePlantImg" src="assets/images/background image.jpeg" width="200" alt="image of plant">
-                    <p>Prefers light index of <span id="sunPreference">{full sun}</span></p>
-                    <p>Average height is <span id="plantHeight">{1}</span>m</p>
-                    <p>Average span is <span id="plantSpan">{50}</span> cm</p>
+                    <div class="card-content" >
+                        <h3>Lewis's Favourite</h3>
+                        <p id="plant-name">{Plant name}</p>
+                        <img id="suitablePlantImg" src="assets/images/background image.jpeg" width="200" alt="image of plant">
+                        <p>Prefers <span id="sunPreference">{full sun}</span></p>
+                    </div>
+                    <!-- <div class="card-content" >
+                        <h3>Obby's Favourite</h3>
+                        <p id="plant-name">{Plant name}</p>
+                        <img id="suitablePlantImg" src="assets/images/background image.jpeg" width="200" alt="image of plant">
+                        <p>Prefers <span id="sunPreference">{full sun}</span></p>
+                    </div>
+                    <div class="card-content" >
+                        <h3>Clare's Favourite</h3>
+                        <p id="plant-name">{Plant name}</p>
+                        <img id="suitablePlantImg" src="assets/images/background image.jpeg" width="200" alt="image of plant">
+                        <p>Prefers <span id="sunPreference">{full sun}</span></p>
+                    </div> -->
+ 
+
                 </div>
                 <!-- <div class="card-content plants">
                     <p>Plant 2</p>
