--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
                 <div class="card-header">
                     <h2>Team Favourites:</h2>
                 </div>
-                <div id="suitableForPlanting" class="card-content plants">
-                    <div class="card-content" >
+                <div id="team-fav-plants" class="card-content plants">
+                    <!-- <div class="card-content" >
                         <h3>Lewis's Favourite</h3>
                         <p id="plant-name">{Plant name}</p>
                         <img id="suitablePlantImg" src="assets/images/background image.jpeg" width="200" alt="image of plant">
                         <p>Prefers <span id="sunPreference">{full sun}</span></p>
                     </div>
-                    <!-- <div class="card-content" >
+                    <div class="card-content" >
                         <h3>Obby's Favourite</h3>
                         <p id="plant-name">{Plant name}</p>
                         <img id="suitablePlantImg" src="assets/images/background image.jpeg" width="200" alt="image of plant">
@@ -63,21 +63,7 @@
                         <img id="suitablePlantImg" src="assets/images/background image.jpeg" width="200" alt="image of plant">
                         <p>Prefers <span id="sunPreference">{full sun}</span></p>
                     </div> -->
- 
-
                 </div>
-                <!-- <div class="card-content plants">
-                    <p>Plant 2</p>
-                </div>
-                <div class="card-contet plants">
-                    <p>Plant 3</p>
-                </div>
-                <div class="card-content plants">
-                    <p>Plant 4</p>
-                </div>
-                <div class="card-content plants">
-                    <p>Plant 5</p>
-                </div> -->
             </div>
 
             <div id="seeds-bank" class="seeds-bank content-card">
