chores: renamed variables, ids and classes  to be more appropriate and descriptitve and removed any unneccesary ids

--- a/index.html
+++ b/index.html
@@ -40,31 +40,15 @@
     </header>
     <section class="hero">
         <div class="container">
-            <div id="good-to-plant"  class="good-to-plant content-card">
+            <a href="#" id="favourites-card"  class="favourites-card content-card">
                 <div class="card-header">
-                    <h2>Team Favourites:</h2>
+                    <h2>Team Favourites</h2>
+                    <p>To see more of our favourites and information about them click here</p>
                 </div>
                 <div id="team-fav-plants" class="card-content plants">
-                    <!-- <div class="card-content" >
-                        <h3>Lewis's Favourite</h3>
-                        <p id="plant-name">{Plant name}</p>
-                        <img id="suitablePlantImg" src="assets/images/background image.jpeg" width="200" alt="image of plant">
-                        <p>Prefers <span id="sunPreference">{full sun}</span></p>
-                    </div>
-                    <div class="card-content" >
-                        <h3>Obby's Favourite</h3>
-                        <p id="plant-name">{Plant name}</p>
-                        <img id="suitablePlantImg" src="assets/images/background image.jpeg" width="200" alt="image of plant">
-                        <p>Prefers <span id="sunPreference">{full sun}</span></p>
-                    </div>
-                    <div class="card-content" >
-                        <h3>Clare's Favourite</h3>
-                        <p id="plant-name">{Plant name}</p>
-                        <img id="suitablePlantImg" src="assets/images/background image.jpeg" width="200" alt="image of plant">
-                        <p>Prefers <span id="sunPreference">{full sun}</span></p>
-                    </div> -->
+                    <!-- Individual cards for each team member display here  -->
                 </div>
-            </div>
+            </a>
 
             <div id="seeds-bank" class="seeds-bank content-card">
                 <div class="card-header">
