saving all changes made over weekend

--- a/assets/pages/yourGarden.html
+++ b/assets/pages/yourGarden.html
@@ -47,6 +47,7 @@
                     >Plant Name:</label>
                     <!-- change this to an option based on the harvesthelper api -->
                     <select class="plant-name-select form-input" id="plant-name-select">
+                        <option value = ''>Select Your Plant...</option>
                     </select>
                     <label
                         for="date-planted-input"
