your garden page table working, dynamic header set for your-garden card on landing page added

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The FlowerPot</title>
     <!-- defer attribute runs the script after the HTML has rendered -->
-    <script src="assets/scripts/widgetScript.js" defer></script>
+    <script src="assets/scripts/indexScript.js" defer></script>
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -41,7 +41,7 @@
         <div class="container">
             <a id="your-Garden"  class="your-garden content-card" href = "assets/pages/yourGarden.html">
                 <div class="card-header">
-                    <h2> Your Garden</h2>
+                    <h2 class = 'your-garden-header'> Your Garden</h2>
                 </div>
                 <div class="card-content">
                     <p>its a good time to plant: list of stuff</p>
