--- a/assets/pages/yourGarden.html
+++ b/assets/pages/yourGarden.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="/assets/css/reset.css">
         <link rel="stylesheet" href="/assets/css/style.css">
         <link rel="stylesheet" href="yourGardenStyles.css">
-        <script src="/assets/scripts/widgetScript.js" defer></script>
+        <script src="/assets/scripts/indexScript.js" defer></script>
         <script src="yourGardenScript.js" defer ></script>
         <link href="https://fonts.googleapis.com/css2?family=New+Tegomin&display=swap" rel="stylesheet">
         <title>FlowerPot- Your Garden</title>
@@ -15,7 +15,7 @@
     <body>
         <header>
             <!-- logo-->
-            <a href="#" class = 'brand'> The Flower<span class = 'logo-pot'>Pot</span></a>
+            <a href="/index.html" class = 'brand'> The Flower<span class = 'logo-pot'>Pot</span></a>
             <nav class="nav-bar">    
                 <ul class="nav-list">
                     <li class = 'nav-links'> 
@@ -47,6 +47,7 @@
                     >Plant Name:</label>
                     <!-- change this to an option based on the harvesthelper api -->
                     <select class="plant-name-select form-input" id="plant-name-select">
+                        <!-- options are dynamic as the api could expand -->
                         <option value = ''>Select Your Plant...</option>
                     </select>
                     <label
@@ -67,11 +68,6 @@
                         <th>Plant Name</th>
                         <th>Date Planted</th>
                         <th>Optimal Sun</th>
-                    </tr>
-                    <tr>
-                        <td>brocoli</td>
-                        <td>030521</td>
-                        <td>lots</td>
                     </tr>
 
                 </table>
