Updated file scructure and seperated widget script from index script.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <script src="assets/scripts/indexScript.js" defer></script>
     <!-- font -->
     <link href="https://fonts.googleapis.com/css2?family=New+Tegomin&display=swap" rel="stylesheet"></head>
 <body>
@@ -39,7 +40,7 @@
     </header>
     <section class="hero">
         <div class="container">
-            <a id="your-Garden"  class="your-garden content-card" href = "assets/pages/yourGarden.html">
+            <a id="your-Garden"  class="your-garden content-card" href = "/yourGarden.html">
                 <div class="card-header">
                     <h2 class = 'your-garden-header'> Your Garden</h2>
                 </div>
