--- a/yourGarden.html
+++ b/yourGarden.html
@@ -6,9 +6,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="/assets/css/reset.css">
         <link rel="stylesheet" href="/assets/css/style.css">
-        <link rel="stylesheet" href="yourGardenStyles.css">
-        <script src="/assets/scripts/indexScript.js" defer></script>
-        <script src="yourGardenScript.js" defer ></script>
+        <link rel="stylesheet" href="/assets/css/yourGardenStyles.css">
+        <script src="/assets/scripts/widgetScript.js" defer></script>
+        <script src="/assets/scripts/yourGardenScript.js" defer ></script>
         <link href="https://fonts.googleapis.com/css2?family=New+Tegomin&display=swap" rel="stylesheet">
         <title>FlowerPot- Your Garden</title>
     </head>
