Favourites card styled and responsive

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <section class="hero">
         <div class="container">
             <a href="#" id="favourites-card"  class="favourites-card content-card">
-                <div class="card-header">
+                <div class="card-header favourites-header">
                     <h2>Team Favourites</h2>
                     <p>To see more of our favourites and information about them click here</p>
                 </div>
