final commit, small changes and big fixes see log for more info

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
                     <a class ='nav-link'>About Us</a>
                 </li>
                 <li class = 'nav-links'> 
-                    <a class ='nav-link'>Contact</a>
+                    <a class ='nav-link' href ="mailto:example@example.com">Contact</a>
                 </li>
                 <li class = 'nav-links'> 
-                    <a class ='nav-link'>Gallery</a>
+                    <a class ='nav-link' >Gallery</a>
                 </li>
             </ul>
         
@@ -40,7 +40,7 @@
     </header>
     <section class="hero">
         <div class="container">
-            <a id="your-Garden"  class="your-garden content-card" href = "/yourGarden.html">
+            <a id="your-garden"  class="your-garden content-card" href = "yourGarden.html">
                 <div class="card-header">
                     <h2 class = 'your-garden-header'> Your Garden</h2>
                 </div>
