--- a/yourGarden.html
+++ b/yourGarden.html
@@ -4,25 +4,25 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="/assets/css/reset.css">
-        <link rel="stylesheet" href="/assets/css/style.css">
-        <link rel="stylesheet" href="/assets/css/yourGardenStyles.css">
-        <script src="/assets/scripts/widgetScript.js" defer></script>
-        <script src="/assets/scripts/yourGardenScript.js" defer ></script>
+        <link rel="stylesheet" href="assets/css/reset.css">
+        <link rel="stylesheet" href="assets/css/style.css">
+        <link rel="stylesheet" href="assets/css/yourGardenStyles.css">
+        <script src="assets/scripts/widgetScript.js" defer></script>
+        <script src="assets/scripts/yourGardenScript.js" defer ></script>
         <link href="https://fonts.googleapis.com/css2?family=New+Tegomin&display=swap" rel="stylesheet">
         <title>FlowerPot- Your Garden</title>
     </head>
     <body>
         <header>
             <!-- logo-->
-            <a href="/index.html" class = 'brand'> The Flower<span class = 'logo-pot'>Pot</span></a>
+            <a href="index.html" class = 'brand'> The Flower<span class = 'logo-pot'>Pot</span></a>
             <nav class="nav-bar">    
                 <ul class="nav-list">
                     <li class = 'nav-links'> 
                         <a class ='nav-link'>About Us</a>
                     </li>
                     <li class = 'nav-links'> 
-                        <a class ='nav-link'>Contact</a>
+                        <a class ='nav-link' href ="mailto:example@example.com">Contact</a>
                     </li>
                     <li class = 'nav-links'> 
                         <a class ='nav-link'>Gallery</a>
@@ -31,7 +31,7 @@
             
                 <div class = 'widget-container'>
                 <div class = "weather-icon-container">
-                    <img class = 'weather-icon' src="/assets/images/widget-icons/load-bar.svg" alt = 'load bar icon'>
+                    <img class = 'weather-icon' src="assets/images/widget-icons/load-bar.svg" alt = 'load bar icon'>
                 </div>
                 <div class = "rainfall-icon-container">
                     <p class = "rainfall-figure weather-icon"></p>
@@ -54,9 +54,9 @@
                         for="date-planted-input"
                         class="date-planted-label form-label"
                         id="date-planted-label"
-                    >Date Planted (dd/mm/yy):</label>
+                    >Date Planted (dd/mm/yyyy):</label>
                     <input
-                        type="text"
+                        type="date"
                         class="date-planted-input form-input"
                         id="date-planted-input"
                     />
@@ -81,6 +81,5 @@
         </section>
         <!-- cdn scripts -->
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js" integrity="sha512-rKFvwjvE4liWPlFnvH4ZhRDfNZ9FOpdkD/BU5gAIA3VS3vOQrQ5BjKgbO3kxebKhHdHcNUHLqxQYSoxee9UwgA==" crossorigin="anonymous"></script>
     </body>
 </html>
