--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
             </a>
             <a id="your-garden"  class="your-garden content-card" href = "yourGarden.html">
                 <div class="card-header">
-                <h2 class = 'your-garden-header'> Your Garden</h2>
+                    <h2 class = 'your-garden-header'> Your Garden</h2>
+                </div>
             </a>
 
             <a id="seeds-bank" class="seeds-bank content-card">
